2001-06-21  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* path.cc: fixed memory leaks from A* pathfinder

2001-06-21  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc: Added (and implemented a few) path types in
	Patrol_schedule.
	* Watch for failed allocation in Timidity driver.

2001-06-19  Jeff Freedman  <jeff@amy.nerble.net>

	* Spellbook_gump.cc:  Added SI reagants table (untested).

2001-06-18  Max Horn  <max@quendi.de>
	* files/listfiles.cc: changed interface of U7ListFiles and removed U7FreeFileList;
	  implemented MacOS version of U7ListFiles
	* gumps/Newfile_gump.cc: std:: namespace police; applied changes to match new interface of U7ListFiles
	* audio/xmidi.cc: std:: namespace police; fixed wrong use of new [] instead of malloc()
	* tools/expack.cc: added exult_si.flx
	* updated MacOS project files

2001-06-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* contain.cc: fixed spellbook-creation bug
	* Makefile.am: fixed build order (server before mapedit)

2001-06-17  Ryan Nunn <triforce@merlin.net.au>
	* cheat_screen.cc : Added global flag modifier. Enabled NPC Experience,
	  training, and general stat modifying.

2001-06-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps/Jawbone_gump.*: gump for the Serpent Jawbone
	* gamewin.cc, gumps/Gump.cc, objs/contain.cc: use new gump
	* Makefile.*: build new gump
	* objs/jawbone.*: Jawbone_object
	* keys.cc, keyactions.*, defaultkeys.txt: 'j' = show jawbone

2001-06-17  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.cc: Use Check_mask() if shapenum=c_any_shapenum.  Can now
	use Erstam's machine.

2001-06-16  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode/compiler/Makefile.am: only clean uclex.cc/ucparse.cc on maintainer-clean (thanks to Robert Bihlmeyer)

2001-06-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/exult_si.flx, data/si/*: new data file (exult_si.flx)
	* Makefile.*, exult.spec.in: build/distribute new data file
	* data/bg/BGmap.shp, data/si/SImap.shp: BG and SI maps