@@ -45,7 +45,6 @@ void ActionInventory(int* params);
 void ActionTryKeys(int* params);
 void ActionStats(int* params);
 void ActionCombatStats(int* params);
-void ActionJawbone(int* params);
 
 void ActionSIIntro(int* params);
 void ActionEndgame(int* params);
